Working version (very rough)

--- a/test_notebook_script.ipynb
+++ b/test_notebook_script.ipynb
@@ -22,7 +22,25 @@
     "\n",
     "`blah`\n",
     "\n",
-    "**blah**"
+    "jnedjnbejdnbje\n",
+    "hello\n",
+    "\n",
+    "**blah**\n",
+    "\n",
+    "huhuhuhuhu\n",
+    "yadadad\n",
+    "\n",
+    "spiro\n",
+    "\n",
+    "\n",
+    "jdj\n",
+    "\n",
+    "jsjs----jsj\n",
+    "jsj\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -32,7 +50,8 @@
    "outputs": [],
    "source": [
     "st.title('Test')\n",
-    "written = st.text_area('type stuff')"
+    "written = st.text_area('type stuff')\n",
+    "st.select_slider('', options=['1','2'])"
    ]
   },
   {
@@ -42,7 +61,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "st.write(written)"
+    "st.write(written)\n",
+    "st.write(written)\n"
    ]
   }
  ],
