cleanup comments and logic

--- a/test_notebook_script.ipynb
+++ b/test_notebook_script.ipynb
@@ -25,6 +25,18 @@
     "jnedjnbejdnbje\n",
     "hello\n",
     "\n",
+    "\n",
+    "jjjj\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "jjsjs\n",
+    "\n",
+    "kkkk\n",
+    "ksjksjks\n",
+    "sjjsjs\n",
+    "\n",
     "**blah**\n",
     "\n",
     "huhuhuhuhu\n",
